<resources>
    <string name="app_name">Atma Jaya Rental</string>
    <string name="title">Login</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="clear_field">CLEAR FIELD</string>
    <string name="harga_pas_hati_senang">Harga Pas, Hati Senang</string>
    <string name="home">Home</string>
    <string name="brosur">Brosur</string>
    <string name="promo">Promo</string>
    <string name="profile">Profile</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="rp">Rp-</string>
    <string name="loading_text">Loading…</string>
    <string name="spesifikasi_mobil">Spesifikasi Mobil</string>
    <string name="tipe_mobil">Tipe Mobil</string>
    <string name="jenis_transmisi_mobil">Jenis Transmisi Mobil</string>
    <string name="jenis_bahan_bakar_mobil">Jenis Bahan Bakar Mobil</string>
    <string name="warna_mobil">Warna Mobil</string>
    <string name="volume_bagasi_mobil">Volume Bagasi Mobil</string>
    <string name="fasilitas_mobil">Fasilitas Mobil</string>
    <string name="harga_sewa_mobil">Harga Sewa Mobil</string>
    <string name="back">BACK</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="jenis_promo">Jenis Promo</string>
    <string name="keterangan_promo">Keterangan Promo</string>
    <string name="profile_pengguna">Profile Pengguna</string>
    <string name="namaT">Nama:</string>
    <string name="emailT">Email:</string>
    <string name="logout">LOGOUT</string>
    <string name="idT">ID:</string>
    <string name="alamatT">Alamat:</string>
    <string name="teleponT">Telepon:</string>
    <string name="update">UPDATE</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="ratingT">Rating:</string>
    <string name="statusT">Status:</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="tanggal_transaksi">Tanggal Transaksi</string>
    <string name="nama_driver">Nama Driver</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="alamat_driver">Alamat Driver</string>
    <string name="email_driver">Email Driver</string>
    <string name="nomor_telepon_driver">Nomor Telepon Driver</string>
    <string name="status_ketersediaan_driver">Status Ketersediaan Driver</string>
    <string name="tersedia">Tersedia</string>
    <string name="tidak_tersedia">Tidak Tersedia</string>
    <string name="password_driver">Password Driver</string>
    <string name="alamat_customer">Alamat Customer</string>
    <string name="email_customer">Email Customer</string>
    <string name="nomor_telepon_customer">Nomor Telepon Customer</string>
    <string name="password_customer">Password Customer</string>
    <string name="laporan">Laporan</string>
    <string name="cetak_laporan">Cetak Laporan</string>
    <string name="laporan_penyewaan_mobil">Laporan Penyewaan Mobil</string>
    <string name="laporan_detail_pendapatan">Laporan Detail Pendapatan</string>
    <string name="laporan_top_5_driver">Laporan Top 5 Driver</string>
    <string name="laporan_performa_driver">Laporan Performa Driver</string>
    <string name="laporan_top_5_customer">Laporan Top 5 Customer</string>
    <string name="pilih_bulan_tahun"><![CDATA[PILIH BULAN & TAHUN]]></string>
    <string name="month_year">MONTH / YEAR</string>
</resources>