<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/ajr_theme"
        android:text="@string/cetak_laporan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_my"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="16dp"
            android:textColor="@color/ajr_theme"
            android:text="@string/month_year" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/pilih_bulan_tahun"
            android:textColor="@color/white"
            android:backgroundTint="@color/ajr_theme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/laporan_penyewaan_mobil"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/ajr_theme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/laporan_detail_pendapatan"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/ajr_theme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/laporan_top_5_driver"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/ajr_theme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/laporan_performa_driver"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/ajr_theme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/laporan_top_5_customer"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/ajr_theme"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="756dp"
        android:background="@color/ajr_theme"
        app:menu="@menu/navbar_manager" />

</RelativeLayout>