<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/ajr_theme"
                android:text="@string/edit_profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nama_driver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/nama_driver" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/ajr_theme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_alamat_driver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/alamat_driver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/ajr_theme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email_driver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email_driver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/ajr_theme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nomor_telepon_driver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/nomor_telepon_driver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nomor_telepon_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ajr_theme" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/tv_status_ketersediaan_driver"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ajr_theme"
                    android:text="@string/status_ketersediaan_driver" />

                <RadioButton
                    android:id="@+id/radio_button_tersedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tersedia"
                    android:textColor="@color/ajr_theme"/>

                <RadioButton
                    android:id="@+id/radio_button_tidak_tersedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak_tersedia"
                    android:textColor="@color/ajr_theme"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password_driver"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/password_driver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/ajr_theme" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:backgroundTint="@color/ajr_theme" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/white"
            android:backgroundTint="@color/ajr_theme" />

    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>