<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_transaksi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="false"
    android:focusable="false"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nomor_transaksi"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/nomor_transaksi"
                    android:textColor="@color/ajr_theme" />

                <TextView
                    android:id="@+id/tv_tanggal_transaksi"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="170dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/tanggal_transaksi"
                    android:textColor="@color/ajr_theme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_nama_customer"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama_customer"
                    android:textColor="@color/ajr_theme" />

                <TextView
                    android:id="@+id/tv_nama_mobil"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama_mobil"
                    android:gravity="right"
                    android:textColor="@color/ajr_theme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_nama_pegawai"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama_pegawai"
                    android:textColor="@color/ajr_theme" />

                <TextView
                    android:id="@+id/tv_kode_promo"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kode_promo"
                    android:gravity="right"
                    android:textColor="@color/ajr_theme" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nama_driver"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama_driver"
                    android:textColor="@color/ajr_theme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_status_transaksi"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status_transaksi"
                    android:gravity="center_horizontal"
                    android:textColor="@color/ajr_theme" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
